--- a/index.html
+++ b/index.html
@@ -1,5 +1,53 @@
-<p>Hello 大家好</p>
-<p>我是Arlen，这是我的个人网站。 </p>
-<p>很高兴你来到这里</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>求职自我介绍</title>
+    <style>
+        body { font-family: Arial, sans-serif; }
+        .container { width: 80%; margin: 0 auto; }
+        header, footer { text-align: center; padding: 2em 0; }
+        section { margin-bottom: 2em; }
+        h2 { color: #007BFF; }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <header>
+            <h1>我的自我介绍</h1>
+        </header>
 
-<img src="微信图片_20240213220348.png" width="500" height="600">
+        <section>
+            <h2>个人信息</h2>
+            <p>姓名：康浩岚</p>
+            <p>职业目标：嵌入式软件工程师</p>
+            <p>邮箱：zhangsan@example.com</p>
+            <p>电话：123-456-7890</p>
+        </section>
+
+        <section>
+            <h2>经历</h2>
+            <p>在XX公司担任前端开发工程师，负责网站的前端设计和开发，优化页面响应时间和用户体验。</p>
+        </section>
+
+        <section>
+            <h2>技能</h2>
+            <ul>
+                <li>熟练掌握HTML, CSS, JavaScript</li>
+                <li>熟悉Vue.js和React框架</li>
+                <li>良好的团队合作能力和沟通技巧</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>教育背景</h2>
+            <p>XXXX大学 计算机科学与技术 学士学位</p>
+        </section>
+
+        <footer>
+            <p>感谢您访问我的个人介绍网站，期待与您的合作。</p>
+        </footer>
+    </div>
+</body>
+</html>
