--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         </header>
 
         <section>
-            <h2>个人信息</h2>
-            <p><img src="微信图片_20240213220348.png" style="float:right">姓名：康浩岚</p>  
+            <h2>个人信息</h2>  
+            <p>姓名：康浩岚</p>  
+            <img src="微信图片_20240213220348.png" style="float:right">
             <p>职业目标：嵌入式软件工程师</p>  
             <p>邮箱：zhangsan@example.com</p>
             <p>电话：123-456-7890</p>
