1 Signed-off-by: Arlen <1620339196@qq.com>

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <section>
             <h2>个人信息</h2>  
-            <p><img src="微信图片_20240213220348.png" style="float:right;width:48px;height:48px;">姓名：康浩岚</p>  
+            <p><img src="me.jpg" style="float:right;width:84px;height:84px;">姓名：康浩岚</p>  
             
 
 
