--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                             <tr>
                                 <td style="padding:2.5%; width:63%; vertical-align:middle; text-align:center;">
                                     <h2 class="name">Arlen Kang</h2>
-                                    <p>I'm a research scientist at Google Research in San Francisco, where I lead a small team that mostly works on NeRF.</p>
+                                    <p>I'm a senior student in south china of technology major in Intelligent manufacturing.I have great interest in robotics and embedded systems.</p>
                                 </td>
                                 <td style="padding:2.5%; width:40%; max-width:40%;">
                                     <a href="20240213220348.png">
@@ -39,6 +39,24 @@
                     <table style="width:100%; border:0; border-spacing:0; border-collapse:separate; margin:0 auto;">
                         <tbody>
                             <tr onmouseout="smerf_stop()" onmouseover="smerf_start()">
+                                <td style="padding:20px; width:25%; vertical-align:middle;">
+                                        <img src="edge ai.jpg" width="100%">                                   
+                                </td>
+                                <td style="padding:20px; width:75%; vertical-align:middle;">
+                                    <span class="papertitle">SMERF: Streamable Memory Efficient Radiance Fields for Real-Time Large-Scene Exploration</span>
+                                    <br>
+                                    <strong>Jonathan T. Barron</strong>
+                                    <br><br>
+                                    <em>arXiv</em>, 2023
+                                    <br>
+                                    <a href="https://smerf-3d.github.io/">project page</a> /
+                                    <a href="https://www.youtube.com/watch?v=zhO8iUBpnCc">video</a> /
+                                    <a href="https://arxiv.org/abs/2312.07541">arXiv</a>
+                                    <p>Distilling a Zip-NeRF into a tiled set of MERFs lets you fly through radiance fields on laptops and smartphones at 60 FPS.</p>
+                                </td>
+                            </tr>
+
+                            <tr>
                                 <td style="padding:20px; width:25%; vertical-align:middle;">
                                     <div class="one">
                                         <div class="two" id="smerf_image">
