Signed-off-by: Arlen <1620339196@qq.com> 2/27

--- a/index.html
+++ b/index.html
@@ -16,12 +16,90 @@
                             <tr>
                                 <td style="padding:2.5%; width:63%; vertical-align:middle; text-align:center;">
                                     <h2 class="name">Arlen Kang</h2>
-                                    <p>I'm a senior student in south china of technology major in Intelligent manufacturing.I have great interest in robotics and embedded systems.</p>
+                                    <p>I'm a junior student in south china of technology major in Intelligent manufacturing.I have great interest in robotics and embedded systems.</p>
                                 </td>
                                 <td style="padding:2.5%; width:40%; max-width:40%;">
                                     <a href="20240213220348.png">
                                         <img style="width:100%; max-width:100%; object-fit:cover; border-radius:50%;" alt="profile photo" src="me.jpg" class="hoverZoomLink">
                                     </a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <table style="width:100%; border:0; border-spacing:0; border-collapse:separate; margin:0 auto;">
+                        <tbody>
+                            <tr>
+                                <td style="padding:20px; width:100%; vertical-align:middle;">
+                                    <h2>Education</h2>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <table style="width:100%; border:0; border-spacing:0; border-collapse:separate; margin:0 auto;">
+                        <tbody>
+                            <tr onmouseout="smerf_stop()" onmouseover="smerf_start()">
+                                <td style="padding:20px; width:25%; vertical-align:middle;">
+                                    <img src="scut.jpg" width="100%">                                   
+                                </td>             
+                                <td style="padding:20px; width:100%; vertical-align:middle;">
+                                    <h3>Bachelor's Degree</h3>
+                                    <p>University: South China University of Technology, Guangzhou, China</p>
+                                    <p>Major: Bachelor of Science in Intelligent Manufacturing</p>
+                                    <p>Expected Graduation: June 2025</p>
+                                    <p>Grades:</p>
+                                    <ul>
+                                        <li>C++ Programming Foundations: 91/100</li>
+                                        <li>Practice of Introduction to Engineering: 91/100</li>
+                                        <li>Linear Algebra: 92/100</li>
+                                        <li>Circuits Practice: 100/100</li>
+                                        <li>Engineering Innovation Training: 95/100</li>
+                                        <li>Embedded System and Design: 99/100</li>
+                                        <li>Modeling, Analysis and Control of Dynamic System: 87/100</li>
+                                    </ul> 
+                                </td>
+                            </tr>
+                            
+                            <tr onmouseout="smerf_stop()" onmouseover="smerf_start()">
+                                <td style="padding:20px; width:25%; vertical-align:middle;">
+                                        <img src="upenn.png" width="100%">                                  
+                                </td>
+                                <td style="padding:20px; width:75%; vertical-align:middle;">
+                                    <h3>Exchange Program</h3>
+                                    <p>University: University of Pennsylvania, Philadelphia, PA, USA</p>
+                                    <p>Participated in a month-long exchange program focusing on innovation, where I studied emerging trends in technology and their application in robotics and intelligent systems.</p>
+                                    <p>Program Time: <a href="https://api.accredible.com/v1/auth/invite?code=60699e19901689df8b04&credential_id=6f85c90a-7c6d-4ade-8eb4-65eccc60ab3f&url=https%3A%2F%2Fcertificates-elp.sas.upenn.edu%2F6f85c90a-7c6d-4ade-8eb4-65eccc60ab3f&ident=15821b32-42db-4cee-91d8-497efe0f87dc">February,2024</a></p>
+                                    <p>Grades:</p>
+                                    <ul>
+                                        <li>Leadership: 96.53/100</li>
+                                        <li>Persuasive Speaking & Writing: 95/100</li>
+                                        <li>Innovation & Technology: 88.82/100</li>
+                                    </ul>
+                                </td>
+                            </tr> 
+                        </tbody>
+                    </table>  
+                    <table style="width:100%; border:0; border-spacing:0; border-collapse:separate; margin:0 auto;">
+                        <tbody>
+                            <tr>
+                                <td style="padding:20px; width:100%; vertical-align:middle;">
+                                    <h2>Interest</h2>
+                                    <p>Robotics and Automation, Digital Manufacturing, Advanced Programming (Python, C++), System Integration</p>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <table style="width:100%; border:0; border-spacing:0; border-collapse:separate; margin:0 auto;">
+                        <tbody>
+                            <tr>
+                                <td style="padding:20px; width:100%; vertical-align:middle;">
+                                    <h2>Skill</h2>
+                                    <ul>
+                                        <li><strong>Programming Languages: </strong>Proficient in Python, C++, and C for embedded system development.</li>
+                                        <li><strong>Development tools: </strong>Mastered in Keil5, Cubemx, Visualstudio, Vofa, Matlab simulink, IAR, Solidworks</li>
+                                        <li><strong>Sensor Integration: </strong>Skilled in integrating various sensors and actuators to create intelligent systems like designing pcb and modeling</li>
+                                        <li><strong>Teamwork style(Collaborative): </strong>My approach to teamwork is rooted in active listening, open-mindedness, and the ability to merge diverse viewpoints into cohesive, innovative solutions.</li>
+                                        <li><strong>Languages: </strong>Fluent in English (IELT 6.0) and Mandarin</li>
+                                    </ul>
                                 </td>
                             </tr>
                         </tbody>
@@ -45,7 +123,7 @@
                                 <td style="padding:20px; width:75%; vertical-align:middle;">
                                     <br>
                                     <strong>A TinyML-based Human Activity Recognition Smart Watch</strong>
-                                    <br><br>
+                                    <br><br>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
                                     <em>9</em>, 2023
                                     <br>
                                     <p>This project aims to develop an intelligent watch based on TinyML and deep learning algorithms, focusing on efficient and accurate posture recognition, and possessing the capability to control smart devices collaboratively. TinyML technology enables the running of machine learning models on ultra-low-power microcontroller devices, allowing the smart watch to perform local data analysis and processing without relying on cloud or edge servers, thereby reducing latency, enhancing privacy protection, and security.</p>
@@ -55,7 +133,8 @@
 
                             <tr onmouseout="smerf_stop()" onmouseover="smerf_start()">
                                 <td style="padding:20px; width:25%; vertical-align:middle;">
-                                        <img src="car.png" width="100%">  
+                                        <img src="car.png" width="100%"> 
+                                        <p></p> 
                                         <img src="pid.png" width="100%">                                  
                                 </td>
                                 <td style="padding:20px; width:75%; vertical-align:middle;">
@@ -68,12 +147,88 @@
                                     <p>The programming approach for the robot's MCU controller is based on an RTOS (Real-Time Operating System) system, which differs from interrupt-driven control. In an RTOS, tasks are executed in a cooperative manner, where higher-priority tasks are given higher priority over lower-priority tasks.The target velocity is passed through the kinematic analysis function to obtain the actual output for each motor. Finally, the motor speed control is achieved by using a PID controller.</p>   
                                     <em style="color:blue;">Our robot achieved the second place in our college!</em>
                                 </td>
-                            </tr>                            
+                            </tr> 
+                            <tr onmouseout="smerf_stop()" onmouseover="smerf_start()">
+                                <td style="padding:20px; width:25%; vertical-align:middle;">
+                                        <img src="charge1.png" width="100%">  
+                                        <p></p>
+                                        <img src="charge2.png" width="100%">                                  
+                                </td>
+                                <td style="padding:20px; width:75%; vertical-align:middle;">
+                                    <br>
+                                    <strong>Development of a Millimeter Wave Radar-Based Living Detection Device for Electric Vehicle Wireless Charging Safety</strong>
+                                    <br><br>
+                                    <em>12</em>, 2022
+                                    <br>
+                                    <p>In this innovative project, our team aimed to enhance the safety of electric vehicle (EV) wireless charging systems and mitigate the adverse effects of electromagnetic field exposure on humans and animals.</p>
+                                    <p> Over the course of a year, we successfully developed an integrated millimeter-wave (mmWave) radar sensor board, enabling effective communication between the mmWave radar and the STM32 main control chip.
+                                        Overcame the limitations of traditional detection methods (infrared sensors, ultrasonic radar, and cameras) by leveraging mmWave radar technology, which offers extensive coverage (up to 160 meters), all-weather operation, and the ability to penetrate non-metallic materials.</p>   
+                                    <em style="color:blue;">Received substantial support as part of a provincial-level university student innovation and entrepreneurship initiative[6,2022].</em>
+                                </td>
+                            </tr>                                                       
+                        </tbody>
+                    </table> 
 
-
-                            
+                    <table style="width:100%; border:0; border-spacing:0; border-collapse:separate; margin:0 auto;">
+                        <tbody>
+                            <tr>
+                                <td style="padding:20px; width:100%; vertical-align:middle;">
+                                    <h2>Ongoing project</h2>
+                                    <ul>
+                                        <li>Development of a Multimodal Fusion Detection Device for Circuit Breaker Hydraulic Mechanism Hydraulic Oil Based on Edge Artificial Intelligence[12,2023].</li>
+                                        <li>Autonomous Life-Saving Ring Deployment Robot with GPS Geofencing and Wireless Recharging Capabilities[12,2023].</li>
+                                    </ul>
+                                    <strong>
+                                        Sponsorship and Affiliation: 
+                                    </strong>
+                                    <p>These two projects are part of the Climbing Plan at South China University of Technology, showcasing the university's commitment to pioneering research and technological innovation.</p>
+                                </td>
+                            </tr>
+                        </tbody>   
+                    </table>
+                    <table style="width:100%; border:0; border-spacing:0; border-collapse:separate; margin:0 auto;">
+                        <tbody>
+                            <tr>
+                                <td style="padding:20px; width:100%; vertical-align:middle;">
+                                    <h2>Talk</h2>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
+                    <table style="width:100%; border:0; border-spacing:0; border-collapse:separate; margin:0 auto;">
+                        <tbody>
+                            <tr onmouseout="smerf_stop()" onmouseover="smerf_start()">
+                                <td style="padding:20px; width:25%; vertical-align:middle;">
+                                    <img src="talk.jpg" width="100%">                                   
+                                </td> 
+                                <td style="padding:20px; width:75%; vertical-align:middle;">
+                                    <p>In the initial phase of my final semester, I had the honor of delivering a lecture titled "The Common Communication Protocols in Embedded Systems" to the freshmen members of our robotics competition team, "Robot IC." My presentation covered essential protocols such as USART, IIC, and SPI. Following the theoretical part, I demonstrated practical applications, showcasing how to utilize fundamental development tools like Keil5 and CubeMX, further enriching the learning experience with a hands-on demonstration.</p>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <table style="width:100%; border:0; border-spacing:0; border-collapse:separate; margin:0 auto;">
+                        <tbody>
+                            <tr>
+                                <td style="padding:20px; width:100%; vertical-align:middle;">
+                                    <h2>Rewards</h2>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <table style="width:100%; border:0; border-spacing:0; border-collapse:separate; margin:0 auto;">
+                        <tbody>
+                            <tr onmouseout="smerf_stop()" onmouseover="smerf_start()"> 
+                                <td style="padding:20px; width:75%; vertical-align:middle;">
+                                    <ul>
+                                        <li>TCL Corporate Scholarships (ranked 2/25 comprehensively,￥20000, TCL Technology)</li>
+                                        <li>SCUT School Scholarship (ranked 2/25 comprehensively,￥20000, SCUT)</li>
+                                        <li>Third Prize of Guangdong 2022 Electronic Design Competition</li>
+                                        <li>National Robocon Competition Third Prize (Startup Team Member, Responsible for Electrical Control)</li>
+                                    </ul>
+                                </td>
+                            </tr>
+                        </tbody>
                 </td>
             </tr>
         </tbody>
